The fifth sprint, the second review