@@ -5,25 +5,28 @@ import ru.yandex.javacource.abakumov.schedule.tasks.Task;
 import java.util.ArrayList;
 import java.util.List;
 
-public class InMemoryHistoryManager implements HistoryManager{
+public class InMemoryHistoryManager implements HistoryManager {
 
-    private List<Task> tasksGetHistory = new ArrayList<>(); //список последних десяти полученных задач
+    private final List<Task> history = new ArrayList<>(); //список последних десяти полученных задач
+    private static final int HISTORY_MAX_SIZE = 10;
 
     @Override
     public void add(Task task) { //помечает задачи как просмотренные
+        if (task == null) {
+            return;
+        }
         checkSpaceForTheTasksGetHistoryList(); //очищаем место, если необходимо перед добавлением
-        tasksGetHistory.add(task);
+        history.add(task);
     }
 
-    @Override
-    public void checkSpaceForTheTasksGetHistoryList() { //очищаем место под новую задачу, если необходимо
-        if (tasksGetHistory.size() == 10) { //если уже есть 10 просмотров, то удаляем самый первый(самый старый)
-            tasksGetHistory.remove(0);
+    private void checkSpaceForTheTasksGetHistoryList() { //очищаем место под новую задачу, если необходимо
+        if (history.size() == HISTORY_MAX_SIZE) { //если уже есть 10 просмотров, то удаляем самый первый(самый старый)
+            history.removeFirst();
         }
     }
     @Override
     public List<Task> getHistory() { //возвращает список просмотренных задач
-        return tasksGetHistory;
+        return history;
     }
 
 }
